--- a/src/main/resources/templates/history.html
+++ b/src/main/resources/templates/history.html
@@ -40,24 +40,58 @@
         tr:hover {
             background-color: #d9edf7;
         }
+
+        tr {
+            border-top: 1px solid #ddd;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th, td {
+            border-left: 1px solid #ddd;
+            border-right: 1px solid #ddd;
+        }
+
+        .custom-pagination {
+            /* Add your custom styles here */
+            list-style-type: none;
+            display: inline-block;
+            padding: 0;
+        }
+
+        .custom-pagination li {
+            float: left;
+            margin: 0 5px;
+        }
+
+        .custom-pagination li a {
+            text-decoration: none;
+            padding: 5px 10px;
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 5px;
+        }
+
+        .custom-pagination li a:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
 <div class="container">
-    <h1 class="text-center">Currency Converter History</h1>
+    <h1 class="text-center" th:text="#{app.currency}">Currency Converter History</h1>
     <table class="table table-striped table-bordered">
         <thead class="thead-dark">
         <tr>
-            <th>From Currency</th>
-            <th>To Currency</th>
-            <th>Amount</th>
-            <th>Date</th>
-            <th>Conversion Result</th>
-            <th>Rate</th>
+            <th th:text="#{label.fromCurrency}">From Currency</th>
+            <th th:text="#{label.toCurrency}">To Currency</th>
+            <th th:text="#{label.amount}">Amount</th>
+            <th th:text="#{label.date}">Date</th>
+            <th th:text="#{label.result}">Conversion Result</th>
+            <th th:text="#{label.rate}">Rate</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="conversion: ${conversionHistory}">
+        <tr th:each="conversion: ${paginatedConversions}">
             <td th:text="${conversion.fromCurrency}"></td>
             <td th:text="${conversion.toCurrency}"></td>
             <td th:text="${conversion.amount}"></td>
@@ -67,6 +101,13 @@
         </tr>
         </tbody>
     </table>
+    <!-- Add pagination controls -->
+    <ul class="pagination custom-pagination">
+        <li th:each="pageNumber : ${#numbers.sequence(1, totalPages)}" class="page-item">
+            <a class="page-link" th:href="@{'/conversion-history?page=' + ${pageNumber}}" th:text="${pageNumber}"></a>
+        </li>
+    </ul>
+
 </div>
 </body>
 </html>
